# my-project-template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
