[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = ["me63316e <me63316e@icloud.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
